--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
-/*.log
+node_modules/
+public/js
+
 /target
-/*-init.clj
-/resources/public/js/compiled
-out
-.rebel_readline_history
+/checkouts
+/src/gen
+
+pom.xml
+pom.xml.asc
+*.iml
+*.jar
+*.log
+.shadow-cljs
+.idea
+.lein-*
+.nrepl-*
+.DS_Store
+
+.hgignore
+.hg/
